# modular-bitfield

./: .gitignore  .rustfmt.toml  .travis.yml  Cargo.toml  README.md  RELEASES.md  main.rs  playground.rs  release.sh
.github/workflows/: rust.yml
benches/: benchmarks.rs  cmp_bitfield_crate.rs  cmp_handwritten.rs  get_and_set.rs  handwritten.rs  utils.rs
benches/utils/: handwritten.rs  mod.rs
docs/: bitfield.md  bitfield_specifier.md  index.md
impl/: Cargo.toml
impl/src/: adt_specifier.rs  bitfield.rs  bitfield_attr.rs  bitfield_specifier.rs  config.rs  define_specifiers.rs  errors.rs  field_config.rs  ident_ext.rs  lib.rs
impl/src/bitfield/: analyse.rs  bitfield_attr.rs  config.rs  expand.rs  field_config.rs  field_info.rs  mod.rs  params.rs
src/: checks.rs  error.rs  lib.rs
src/private/: array_bytes_conv.rs  checks.rs  impls.rs  mod.rs  proc.rs  push_pop.rs  traits.rs  utils.rs
tests/: 01-specifier-types.rs  02-storage.rs  03-accessors.rs  04-multiple-of-8bits.rs  04-multiple-of-8bits.stderr  05-accessor-signatures.rs  06-enums.rs  07-optional-discriminant.rs  08-non-power-of-two.stderr  09-variant-out-of-range.rs  09-variant-out-of-range.stderr  10-bits-attribute.rs  11-bits-attribute-wrong.rs  11-bits-attribute-wrong.stderr  12-accessors-edge.rs  13-tuple-structs.rs  14-checked-setters.rs  15-manual-reset.rs  16-u128-specifier.rs  17-byte-conversions.rs  18-regression-issue18.rs  18-within-single-byte.rs  19-get-spanning-data.rs  20-access-test.rs  20-access-test.stderr  21-raw-identifiers.rs  22-with-setter.rs  24-primitives-as-specifiers.rs  26-invalid-struct-specifier.stderr  27-invalid-union-specifier.stderr  28-single-bit-enum.rs  29-struct-in-struct.rs  30-out-of-bounds-specifier.rs  30-out-of-bounds-specifier.stderr  31-bytes-param-on-bitfield.rs  31-unfilled-from-bytes.rs  32-bytes-param-on-specifier-bitfield.rs  33-bytes-param-causing-error-1.rs  33-bytes-param-causing-error-1.stderr  34-bytes-param-causing-error-2.rs  (+10 more)
tests/bitfield/: bits_param.rs  bytes_param.rs  derive_bitfield_specifier.rs  derive_debug.rs  derive_specifier.rs  filled_param.rs  mod.rs  no_implicit_prelude.rs  regressions.rs  repr.rs  skip.rs
tests/bits-param/: bits-non-filled-1.rs  bits-non-filled-2.rs  bits-non-filled.rs  complex-use-case.rs  conflicting-params.stderr  conflicting-repr.rs  conflicting-repr.stderr  duplicate-param-1.rs  duplicate-param-1.stderr  duplicate-param-2.stderr  invalid-param-value-1.stderr  invalid-param-value-2.rs  invalid-param-value-2.stderr  invalid-param-value.stderr  low-bits-filled.rs  missing-param-value.rs  missing-param-value.stderr  too-few-bits.rs  too-few-bits.stderr  too-many-bits.stderr  valid-use-1.rs  valid-use-2.rs  valid-use-3.rs  valid-use-4.rs
tests/bytes-param/: duplicate-parameters.rs  duplicate-parameters.stderr  fewer-bytes-than-expected.rs  fewer-bytes-than-expected.stderr  invalid-int-value.stderr  invalid-type.stderr  more-bytes-than-expected.stderr  valid-bitfield.rs  valid-specifier-bitfield.rs
tests/derive-bitfield-specifier/: 08-non-power-of-two.stderr  09-variant-out-of-range.stderr  adt_errors.rs  adt_errors.stderr  adt_tag_missing.rs  adt_tag_missing.stderr  adts.rs
tests/derive-debug/: duplicate-derive-debug-2.stderr  duplicate-derive-debug.rs  duplicate-derive-debug.stderr  print-invalid-bits.rs  respects-other-derives.rs  valid-use-2.rs  valid-use-specifier.rs  valid-use.rs
tests/derive-specifier/: duplicate-derive-1.stderr  duplicate-derive-2.rs  duplicate-derive-2.stderr  out-of-bounds.stderr  struct-in-struct.rs  unfilled-from-bytes.rs  valid-use.rs
tests/filled-param/: duplicate-parameters.stderr  invalid-bool-value.rs  invalid-bool-value.stderr  invalid-specified-as-filled.stderr  invalid-specified-as-unfilled.rs  invalid-specified-as-unfilled.stderr  valid-bitfield-1.rs  valid-bitfield-2.rs  valid-bitfield-specifier-1.rs  valid-bitfield-specifier-2.rs
tests/regressions/: deny_elided_lifetime.rs  invalid_bits_field_attr.rs  no-implicit-prelude-2.rs  no-implicit-prelude.rs  regression-issue-8.rs  regression-v0.11.rs
tests/repr/: complex-use.rs  conflicting-ignored-reprs.rs  conflicting-ignored-reprs.stderr  duplicate-repr-1.rs  duplicate-repr-1.stderr  duplicate-repr-2.rs  duplicate-repr-2.stderr  duplicate-repr-3.rs  duplicate-repr-3.stderr  invalid-repr-1.rs  invalid-repr-1.stderr  invalid-repr-2.rs  invalid-repr-2.stderr  invalid-repr-unfilled.stderr  invalid-repr-width-1.stderr  invalid-repr-width-2.rs  invalid-repr-width-2.stderr  multiple-vaid-reprs-1.rs  multiple-vaid-reprs-2.rs  multiple-valid-reprs-1.rs  multiple-valid-reprs-2.rs  valid-cond-use.rs  valid-use.rs
tests/skip/: double_wildcards-1.rs  double_wildcards-2.rs  duplicate-attr.stderr  duplicate-getters-1.stderr  duplicate-getters-2.rs  duplicate-getters-2.stderr  duplicate-getters-3.rs  duplicate-getters-3.stderr  duplicate-setters-1.stderr  duplicate-setters-2.stderr  duplicate-setters-3.rs  duplicate-setters-3.stderr  duplicate-specifier.stderr  invalid-specifier.stderr  skip-default.rs  skip-getters-and-setters-1.rs  skip-getters-and-setters-2.rs  skip-getters.rs  skip-setters.rs  skip-with-debug.rs  use-skipped-getter-1.rs  use-skipped-getter-1.stderr  use-skipped-getter-2.rs  use-skipped-getter-2.stderr  use-skipped-getter-3.stderr  use-skipped-getter.rs  use-skipped-getter.stderr  use-skipped-setter-1.rs  use-skipped-setter-1.stderr  use-skipped-setter-2.rs  use-skipped-setter-2.stderr  use-skipped-setter-3.rs  use-skipped-setter-3.stderr  use-skipped-setter.rs  use-skipped-setter.stderr
tests/ui/: access_test.stderr  bits_attribute_wrong.stderr  empty.rs  empty.stderr  generic.stderr  invalid_struct_specifier.rs  invalid_struct_specifier.stderr  invalid_union_specifier.stderr  multiple_of_8bits.rs  multiple_of_8bits.stderr  unused_must_use.stderr
tests/ui/bits_param/: conflicting_params.rs  conflicting_params.stderr  conflicting_repr.stderr  duplicate_param_1.stderr  duplicate_param_2.rs  duplicate_param_2.stderr  invalid_param_value_1.stderr  invalid_param_value_2.stderr  missing_param_value.stderr  too_few_bits.stderr  (+1 more)
(+124 files in other folders)
