[package]
name = "modular-bitfield"
version = "0.11.1"
edition = "2018"
authors = ["Robin Freyler <robinfreyler@web.de>"]
license = "MIT/Apache-2.0"
readme = "README.md"

repository = "https://github.com/robbepop/modular-bitfield"
documentation = "https://docs.rs/modular-bitfield"
description = "Allows to easily define bitfield types with modular building blocks."
categories = ["data-structures", "no-std"]
keywords   = ["bitfield", "bit", "bitfields"]

autotests = false

[dev-dependencies]
trybuild = "1.0"
criterion = "0.3"
bitfield = "0.13"

[[test]]
name = "tests"
path = "tests/progress.rs"

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[[bench]]
name = "cmp_handwritten"
path = "benches/cmp_handwritten.rs"
harness = false

[[bench]]
name = "cmp_bitfield_crate"
path = "benches/cmp_bitfield_crate.rs"
harness = false

[[bin]]
name = "playground"
path = "playground.rs"

[dependencies]
modular-bitfield-impl = { path = "impl", version = "0.11.1" }
static_assertions = "1.1"

[profile.bench]
codegen-units = 1

[workspace]
members = [
    "impl"
]
