[package]
name = "modular-bitfield-impl"
version = "0.11.2"
edition = "2018"
authors = ["Robin Freyler <robinfreyler@web.de>"]
license = "MIT OR Apache-2.0"
readme = "../README.md"

repository = "https://github.com/robbepop/modular-bitfield"
documentation = "https://docs.rs/modular-bitfield"
description = "Bitfields for structs that allow for modular use of enums."
categories = ["data-structures"]
keywords   = ["bitfield", "bit", "bitfields"]

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "1", features = ["full"] }
proc-macro2 = "1"

[dev-dependencies]
modular-bitfield = { path = "..", version = "0.11.2" }
